Video controls added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
     <div class="carousel-container" id="carouselContainer">
 
+      <video id="camera" class="camera" preload autoplay loop muted></video>
+
       <header class="carousel-header">
 
         <h1 class="carousel__heading">F.R.I.D.A.Y</h1>
@@ -49,7 +51,8 @@
 
     </div>
 
-    <script type="text/javascript" src="assets/scripts/bundle.js" async></script>
+    <script type="text/javascript" src="assets/scripts/tracking-min.js"></script>
+    <script type="text/javascript" src="assets/scripts/bundle.js"></script>
 
   </body>
 </html>
