--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
 
     <div class="carousel-container" id="carouselContainer">
 
+
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="mic" id="mic">
+        <title>Mic</title>
+        <path d="M16 11c0 2.209-1.791 4-4 4s-4-1.791-4-4v-7c0-2.209 1.791-4 4-4s4 1.791 4 4v7zm4-2v2c0 4.418-3.582 8-8 8s-8-3.582-8-8v-2h2v2c0 3.309 2.691 6 6 6s6-2.691 6-6v-2h2zm-7 13v-2h-2v2h-4v2h10v-2h-4z"/>
+      </svg>
+
+      <span class="mic-res" id="micRes" style="display: none;">Listening...</span>
+
       <video id="camera" class="camera" preload autoplay loop muted></video>
 
       <header class="carousel-header">
@@ -50,7 +58,6 @@
       <ul class="carousel__bullets" id="carouselBullets"></ul>
 
     </div>
-
     <script type="text/javascript" src="assets/scripts/tracking-min.js"></script>
     <script type="text/javascript" src="assets/scripts/bundle.js"></script>
 
