Automagic create slides power added

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         </button>
       </header>
 
-      <section class="carousel">
+      <section class="carousel" id="carousel">
 
-        <article class="carousel__slide carousel__slide--list">
+        <!-- <article class="carousel__slide carousel__slide--list">
           <h1 class="heading-1">Web Components</h1>
           <ul class="list">
             <li class="list__item">Exemplo de item aaaa</li>
@@ -87,7 +87,7 @@
         <article class="carousel__slide carousel__slide--bottom">
           <h1 class="heading-1">Web Components</h1>
           <h2 class="heading-2">Make components for humans</h2>
-        </article>
+        </article> -->
 
       </section>
 
