Gamepad controls added

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 
     </div>
     <script type="text/javascript" src="assets/scripts/tracking-min.js"></script>
+    <script type="text/javascript" src="assets/scripts/gamepad.js"></script>
     <script type="text/javascript" src="assets/scripts/bundle.js"></script>
 
   </body>
